RESOLVED FIXED 207558
Fix for crashes in WebAccessibilityObjectWrapper after notification updates in IsolatedTree mode.
https://bugs.webkit.org/show_bug.cgi?id=207558
Summary Fix for crashes in WebAccessibilityObjectWrapper after notification updates i...
Andres Gonzalez
Reported 2020-02-11 09:39:03 PST
Fix for crashes in WebAccessibilityObjectWrapper after notification updates in IsolatedTree mode.
Attachments
Patch (22.31 KB, patch)
2020-02-11 09:50 PST, Andres Gonzalez
no flags
Patch (17.28 KB, patch)
2020-02-11 11:21 PST, Andres Gonzalez
no flags
Andres Gonzalez
Comment 1 2020-02-11 09:50:19 PST
chris fleizach
Comment 2 2020-02-11 09:54:34 PST
Comment on attachment 390378 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=390378&action=review > Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperMac.mm:802 > + if (self.axBackingObject) if (auto backingObject = self.axBackingObject) .... > Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperMac.mm:1956 > + return Accessibility::retrieveValueFromMainThread<RetainPtr<id>>([protectedSelf = RetainPtr<WebAccessibilityObjectWrapper>(self)] () -> RetainPtr<id> { should we have a retrieveValueFromMainThreadWithAutorelease function that handles the right casting and release for these kinds of values?
Andres Gonzalez
Comment 3 2020-02-11 11:21:08 PST
Andres Gonzalez
Comment 4 2020-02-11 11:23:07 PST
(In reply to chris fleizach from comment #2) > Comment on attachment 390378 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=390378&action=review > > > Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperMac.mm:802 > > + if (self.axBackingObject) > > if (auto backingObject = self.axBackingObject) > .... Fixed. > > > Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperMac.mm:1956 > > + return Accessibility::retrieveValueFromMainThread<RetainPtr<id>>([protectedSelf = RetainPtr<WebAccessibilityObjectWrapper>(self)] () -> RetainPtr<id> { > > should we have a retrieveValueFromMainThreadWithAutorelease function that > handles the right casting and release for these kinds of values? Done.
WebKit Commit Bot
Comment 5 2020-02-11 13:33:46 PST
Comment on attachment 390397 [details] Patch Clearing flags on attachment: 390397 Committed r256347: <https://trac.webkit.org/changeset/256347>
WebKit Commit Bot
Comment 6 2020-02-11 13:33:47 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7 2020-02-11 13:34:17 PST
Note You need to log in before you can comment on or make changes to this bug.